# bot

./: .gitignore  main.py  marble_client.py  plotting_utils.py  pyproject.toml  segmenting.py  slic_kmeans.py
clients/: ForwardMarbleClient.py  SafetySpeedMarbleClient.py  marble_client.py
